Fix alignment issues on campaign colophon

--- a/assets/scss/components/_campaign-colophon.scss
+++ b/assets/scss/components/_campaign-colophon.scss
@@ -5,6 +5,8 @@
 
   display: flex;
 
+  gap: my.$gutter * 0.5;
+
   align-items: center;
 
   a {
@@ -13,18 +15,18 @@
 }
 
 .colophon__creator-avatar {
+  flex-shrink: 0;
+
   width: my.$gutter * 2.5;
   height: my.$gutter * 2.5;
-  margin-right: my.$gutter * 0.5;
-  object-fit: cover;
 
   border-radius: 100%;
+  object-fit: cover;
 }
 
 .colophon__campaign {
   display: flex;
 
-  flex-basis: 0;
   flex-grow: 1;
   flex-wrap: wrap;
 
@@ -32,7 +34,20 @@
 
   align-items: center;
 
+  min-width: 0;
   margin: 0;
+
+  > div {
+    max-width: 100%;
+  }
+
+  dt,
+  dd {
+    max-width: 100%;
+    overflow: hidden;
+
+    text-overflow: ellipsis;
+  }
 
   dt {
     font-size: my.ms-step(-1);
